sql/json_schema.cc
@@ -520,12 +520,10 @@ bool Json_schema_enum::validate(const json_engine_t *je,
 
   if (temp_je.value_type > JSON_VALUE_NUMBER)
   {
-    if (temp_je.value_type == JSON_VALUE_TRUE)
-      return !(enum_scalar & HAS_TRUE_VAL);
-    if (temp_je.value_type == JSON_VALUE_FALSE)
-      return !(enum_scalar & HAS_FALSE_VAL);
-    if (temp_je.value_type == JSON_VALUE_NULL)
-      return !(enum_scalar & HAS_NULL_VAL);
+    if (!(enum_scalar & (1 << temp_je.value_type)))
+      return true;
+    else
+      return false;
   }
   json_get_normalized_string(&temp_je, &a_res, &err);
   if (err)
@@ -546,6 +544,7 @@ bool Json_schema_enum::handle_keyword(THD *thd, json_engine_t *je,
                                       List<Json_schema_keyword>
                                            *all_keywords)
 {
+  int count= 0;
   if (my_hash_init(PSI_INSTRUMENT_ME,
                    &this->enum_values,
                    je->s.cs, 1024, 0, 0, (my_hash_get_key) get_key_name,
@@ -559,14 +558,16 @@ bool Json_schema_enum::handle_keyword(THD *thd, json_engine_t *je,
     {
       if (json_read_value(je))
         return true;
+      count++;
       if (je->value_type > JSON_VALUE_NUMBER)
       {
-        if (je->value_type == JSON_VALUE_TRUE)
-          enum_scalar|= HAS_TRUE_VAL;
-        else if (je->value_type == JSON_VALUE_FALSE)
-          enum_scalar|= HAS_FALSE_VAL;
-        else if (je->value_type == JSON_VALUE_NULL)
-          enum_scalar|= HAS_NULL_VAL;
+        if (!(enum_scalar & (1 << je->value_type)))
+          enum_scalar|= 1 << je->value_type;
+        else
+        {
+          my_error(ER_JSON_INVALID_VALUE_FOR_KEYWORD, MYF(0), "enum");
+          return true;
+        }
       }
       else
       {
@@ -586,12 +587,26 @@ bool Json_schema_enum::handle_keyword(THD *thd, json_engine_t *je,
         {
           norm_str[a_res.length()]= '\0';
           strncpy(norm_str, (const char*)a_res.ptr(), a_res.length());
-          if (my_hash_insert(&this->enum_values, (uchar*)norm_str))
-           return true;
+          if (!my_hash_search(&this->enum_values, (uchar*)norm_str,
+                              strlen(norm_str)))
+          {
+            if (my_hash_insert(&this->enum_values, (uchar*)norm_str))
+              return true;
+          }
+          else
+          {
+            my_error(ER_JSON_INVALID_VALUE_FOR_KEYWORD, MYF(0), "enum");
+            return true;
+          }
         }
       }
     }
-    return je->s.error ? true : false;
+    if (!count)
+    {
+     my_error(ER_JSON_INVALID_VALUE_FOR_KEYWORD, MYF(0), "enum");
+     return true;
+    }
+    return false;
   }
   else
   {
